objects/Job_Posting_Sites__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Site_Name__c</fullName>
        <label>Job Site Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Site</label>
        <type>Checkbox</type>
    </fields>
    <label>Job Posting Site</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SITE-{0000}</displayFormat>
        <label>Site Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Posting Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>